fixed spacing for main navigation items and uploaded higher quality logo

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -89,13 +89,22 @@ header {
         display: flex;
         align-items: flex-end;
         position: relative;
+        .container-fluid{
+            padding: 0px;
+            @include screen_btw(0px, $theme_width){
+                padding: 0 30px;
+            }
+        }
         .logo-container {
+            
+            
             .logo {
-                @include screen_btw(0px, 724px){
+                @include screen_btw(0px, 992px){
                     
                     height: 34px;
-                    margin-bottom: 2px;
+                    margin-top: 0px !important;
                 }
+                margin-top: 33px;
                 height: 46px;
                 width: auto;
             }
@@ -160,6 +169,9 @@ header {
             
             margin-top: 17px;
             &:not(:last-child){
+                @include screen_btw(993px, 1200px){
+                    margin-right: 10px;
+                }
                 margin-right: 38px;
             }
             &.dropdown{
@@ -916,6 +928,9 @@ main {
         height: 100%;
         padding: 15px 12px;
         border-radius: 7px !important;
+        .img-container{
+            height: 292px;
+        }
         .card-body{
             background-color: $primary_white;
             font-weight: 400;
